<resources>
    <string name="app_name">NoviSad</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="basic_info">Osnovne informacije</string>
    <string name="sights">Znamenitosti</string>
    <string name="nature_and_culture">Priroda &amp; Kultura</string>
    <string name="shop">Šoping centri</string>
    <string name="food">Restorani</string>
    <string name="detail">Detail</string>
    <string name="novi_sad">Novi Sad</string>
    <string name="attraction_image_des">Attraction Image</string>
    <string name="image_des">Image</string>
    <string name="image_id">image ID</string>
    <string name="name">name</string>
    <string name="short_description">short description</string>
    <string name="description">description</string>
    <string name="address">address</string>
    <string name="transport">transport</string>
    <string name="phone">phone</string>
    <string name="web">web</string>
    <string name="hours">hours</string>
    <string name="fee">fee</string>
    <string name="category">category</string>
    <string name="noviSad">Novi Sad</string>
    <string name="novisad_opis">Novi Sad je grad kulture i turizma na Dunavu, na obroncima Fruške Gore, iz godine u godinu sve više cveta. Grad koji pruža ruke svima koji žele da uživaju u raznolikosti, umetnosti i uljudnosti. Predstavlja raskršće najvažnijih evropskih puteva, drumskih i železničkih, što značajno doprinosi industrijskom, kulturnom i privrednom razvitku grada.         Danas je, posle svih nedaća koje je stojički podneo, savršen spoj istorije i budućnosti, tradicionalnog i savremenog načina života.         Mnogi mladi ljudi ga zovu „studentski grad“ jer je poslednjih decenija postao popularan izbor za nastavak školovanja i života posle srednje škole.         Sigurno zato što pruža velike mogućnosti kako za izbor fakulteta, tako i za ostvarenje mladih u pogledu poslovnih prilika.         Ono čime grad danas može da se pohvali jeste ogroman turistički potencijal, univerzitetsko žarište sa 10 fakulteta, mnogobrojni privatni fakulteti i stručne škole, kulturne manifestacije koje privlače ljude sa svih meridijana, bajkoviti parkovi i kupališta.         Krenimo od istorijskog nasleđa i bogatstva koji oslikavaju grad u najboljem svetlu, a to su Dunav i Petrovaradinska tvrđava. Upravo zajedno čine neraskidivu savršenu celinu. Petrovaradinska tvrđava, smeštena na kamenitom brdu iznad Dunava, je jedna od najvećih i najočuvanijih tvrđava u Evropi, građena u baroknom vojnom stilu. Ispod nje se nalaze vojne prostorije i dugački hodnici u čak 4 nivoa (oko 16km dužine), izgrađena kako bi se vojska zaštitila od neprijatelja i mogla da živi u njima. Tvrđava je poznata po tzv. „pijanom satu“ čija mala kazaljka pokazuje minute, a velika sate, kako bi lađari i iz daleka po lošem vremenu mogli da vide koliko je sati. Sat je poklon za grad od carice Marije Terezije. Danas se na Tvrđavi održavaju mnogobrojne manifestacije kao što su „EXIT“ muzički festival, poznat širom sveta.         Najviši organi Autonomne pokrajine Vojvodina smešteni su u zgradi Banovine koju popularno zovu „Mermerna lepotica“ i „Lađa na Dunavu“ jer joj fasadu krasi mermerni kamen sa ostrva Brač. To je jedna od najmonumentalnijih građevina savremenog doba, izgrađena 1939.godine.         Novosađani se posebno ponose jezgrom grada koji krasi Trg slobode, nastao u 18.veku. U središtu se nalazi spomenik Svetozaru Miletiću, a na zapadnoj strani Gradska kuća sa upečatljivim jonskim i korintskim stubovima, kopija gradske kuće u Gracu. Na suprotnoj strani Gradske kuće nalazi se katolička crkva Ime Marijino, a tu je i Hotel Vojvodina, zgrada prvo namenski izgrađena za hotel još 1854.godine.         Razlog zbog kog kažemo da je Novi Sad pravi evropski kulturni centar jeste institucija koja je najstarija ove vrste u Srbiji, a to je Srpsko narodno pozorište, osnovano 1861. godine. Od Trga slobode, na kom se najčešće okupljaju novosađani, ali i turisti, proteže se jedna od najstarijih gradskih ulica – Zmaj Jovina ulica. Meštani su je nazivali „Magazinski sokak“ zbog mnoštva zanatskih i trgovinskih radnji. Na kraju ulice nalazi se bronzani spomenik Jovanu Jovanoviću Zmaju, dečijem pesniku.</string>
    <string name="klima">Klima</string>
    <string name="klima_opis">Klima u Novom Sadu prelazi iz umereno-kontinentalne u kontinentalnu, tako da grad ima sva četiri godišnja doba. Preko jeseni i zime zna duvati hladan vetar košava, koji obično traje od tri do sedam dana. Košava može tokom zime da stvori nanose i smetove snega tokom vejavica i mećava.
        Prosečna temperatura vazduha u gradu je 10,9°C, srednja temperatura u januaru je –1°C, dok je u julu 21,6°C. Godišnje padne prosečno 578 mm padavina, a broj dana sa padavinama je 122. </string>
    <string name="valuta">Valuta</string>
    <string name="valuta_opis">U Srbiiji je zvanično platežno sredstvo dinar, oznaka RSD.

</string>
    <string name="exit">Exit</string>
    <string name="exit_opis">EXIT je višestruko nagrađivani internacionalni letnji muzički festival. Održava se svake godine u Novom Sadu u Srbiji, na Petrovaradinskoj tvrđavi, koju mnogi smatraju za jednu od najboljih festivalskih lokacija na svetu, i na njemu nastupa preko 1000 izvođača na više od 40 bina i festivalskih zona.</string>
    <string name="exit_opis_detalji">Pored titule „Najbolji evropski festival” osvojene na Evropskim festivalskim nagradama 2013. i 2017. godine, EXIT je 2007. godine proglašen za najbolji evropski festival na Britanskim festivalskim nagradama. EXIT je proglašen i za Najbolji evropski festival za 2016. godinu od strane vodećeg evropskog turističkog priznanja “European Best Destinations“, koje se dodeljuje u saradnji sa sa Evropskom komisijom, dok je Savet za regionalnu saradnju 2017. odabrao EXIT festival za Šampiona regionalne saradnje u Jugoistočnoj Evropi.
        O Exitu su pisali svi važni mediji sveta, a priznanja su dobijena od medijskih magnata kao što su CNN (“World’s Top 5 Festivals”), The Guardian (“World’s Best Festival”), The Sun (“One of Europe’s most popular music events”), Euronews, New York Times, BBC (“Top 3 Music Festivals”), Forbes (“Thanks to EXIT, Serbia is a festival hot spot worth your attention”), The Times (“Best European Festival”), MTV (“World’s Best Festival”), Huffington Post, Conde Nast Traveller, Daily Mail, The Independent, Lonely Planet i brojnih drugih.</string>
    <string name="exit_adresa">Petrovaradinska tvrđava</string>
    <string name="exit_transport">Autobus - 3</string>
    <string name="exit_telefon">+381&#8211;661&#8211;23&#8211;99</string>
    <string name="exit_web">www.exitfest.org/</string>
    <string name="exit_rVreme">Otvoreno 24h tokom trajanja festivala</string>
    <string name="exit_cena">6.400 RSD</string>
    <string name="petrovaradin">Petrovaradinska tvrdjava</string>
    <string name="petrovaradin_opis">Petrovaradinska tvrđava se nalazi u Novom Sadu, Srbiji, u mestu Petrovaradin na obali Dunava i obroncima Fruške gore.</string>
    <string name="petrovaradin_opis_detalji">Kamen temeljac je položio austrijski princ Kroj. Izgradnja tvrđave, po projektu francuskog vojnog arhitekte Sebastijana Vobana, trajala je punih 88 godina, sve do 1780. Izgradnju su vodili austrijski vojni arhitekti. Tvrđava je izgrađena na 122 hektara, na uzvišenju koje dominira okolinom. Bila je neosvojiva za ondašnju ratnu tehniku i već tada je dobila naziv Gibraltar na Dunavu. Kao isključivo vojni objekat, Petrovaradinska tvrđava služila je sve do 1948. godine. Pod zaštitu države stavljena je 1951. godine, od kada predstavlja kulturni i turistički objekat. Pored muzeja, arhiva i niza umetničkih ateljea, poslednjih godina na Petrovaradinskoj tvrđavi održava se muzički festival "Egzit"</string>
    <string name="petrovaradin_adresa">Petrovaradinska tvrđava</string>
    <string name="petrovaradin_transport">Autobus - 3</string>
    <string name="petrovaradin_telefon">/</string>
    <string name="petrovaradin_web">www.visitnovisad.rs/petrovaradinska_tvrdjava.html</string>
    <string name="petrovaradin_rVreme">Otvoreno 24h</string>
    <string name="petrovaradin_cena">Besplatno</string>
    <string name="strand">Štrand</string>
    <string name="strand_opis">Najlepša plaža na Dunavu, novosadski Štrand zvanično je svoje kapije otvorio 1911.godine, mada su Novosađani na tom mestu davno pre toga koristili čari Dunava.</string>
    <string name="strand_opis_detalji">Krajem 19. veka bila su popularna Štenglova dunavska kupatila, tzv. «švimšule», ili škole plivanja. Na Dunavu su bili postavljeni splavovi sa buradima vezanim za balvane. Kupaći kostimi koji su tada Štrandom ni malo ne liče na ono što se danas može videti na plaži. Više su sakrivali, nego što su otkrivali. Interesantno je da se uz ulaznicu dobijao kupaći kostim, koji je morao da zadovolji stroga pravila. Već tada, Štrand je imao organizovanu stražarsku i spasilačku službu, a bili su angažovani i učitelji plivanja. Iz tog doba postoje zapisi i o mnogim divljim plažama s obe strane Dunava koje su pohodili oni kojima je Štrand bio daleko, ili nisu imali za ulaznicu. Izgradnjom tri reda drvenih kabina 1913. godine, potom biletarnice, barake za bicikle, tuševa, restorana, saletle, tramboline, skakaonice i navozaza za čamce za iznajmljivanje, Štrand je, uz pažljivo odnegovano zelenilo i guste drvorede, pružao visok komfor i zavidan izgled belosvetske otmenosti.</string>
    <string name="strand_adresa">Novi Sad</string>
    <string name="strand_transport">Autobus - 4,8</string>
    <string name="strand_telefon">+381&#8211;21&#8211;00&#8211;266</string>
    <string name="strand_web">zelenilo.com/strand/</string>
    <string name="strand_rVreme">8h - 24h</string>
    <string name="strand_cena">50 RSD</string>
    <string name="katakombe">Katakombe</string>
    <string name="katakombe_opis">Ispod Petrovaradinske tvrđave prostire se oko 20 kilometara podzemnih tunela, u kojima je i bunar s kojeg je vodu pio Jozef Drugi, sin Marije Terezije. </string>
    <string name="katakombe_opis_detalji">Hodnici su dugački više od 20 kilometara, a raspoređeni su u četiri nivoa. Svaki nivo je u drugoj boji, pa je prvi nivo označen crvenom, drugi zelenom, treći plavom, a četvrti crnom bojom. Najmisterioznije i najčudnije mesto na dnu četvrtog, crnog nivoa jeste takozvani Kajzer bunar, s kojeg je vodu pio sin Marije Terezije Jozef, austrijski car.
        Postojanje bunara je logično jer je u slučaju opsade bilo važno da vojna posada ima izvor vode. Prema našim istraživanjima, car Josif je nekoliko puta dolazio do bunara. Naspram bunara postoji i tabla na kojoj je zabeleženo na nemačkom jeziku da je on posećivao ovo mesto. Na tabli je ispisano da je Jozef iz bunara pio vodu u pratnji komandanta minerskog korpusa - kaže Leon Šurbanović.</string>
    <string name="katakombe_adresa">Petrovaradinske tvrđave, Novi Sad 21131</string>
    <string name="katakombe_transport">Autobus - 3</string>
    <string name="katakombe_telefon">/</string>
    <string name="katakombe_web">www.radiosignal.rs/katakombe-ispod-tvrdave-sve-tajne-podzemlja/</string>
    <string name="katakombe_rVreme">8h - 15h</string>
    <string name="katakombe_cena">Besplatno</string>
    <string name="dunavska">Dunavska ulica</string>
    <string name="dunavska_opis">Najstarija ulica u Novom Sadu sa prelepim fasadamas orlomentima koji krase objekte, Ilica koja vodi prema Dunavskom parku i prelepoj reci Dunavu.</string>
</resources>